--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
+<!-- strings.xml -->
 <resources>
-    <string name="app_name">HomeWork</string>
-    <string name="title">Решить уравнение a*x*x+bx+c=0</string>
-    <string name="a">Введите A</string>
-    <string name="b">Введите B</string>
-    <string name="c">Введите C</string>
-    <string name="calculate">Вычислить</string>
+    <string name="app_name">Advanced Calculator</string>
 </resources>
+
+    <!-- arrays.xml -->
